another spacing fix for mobile for about page and project page

--- a/web/ui/static/css/about.css
+++ b/web/ui/static/css/about.css
@@ -6,5 +6,5 @@
     margin: auto;
     width: 50%;
     font-family: "Trebuchet MS", sans-serif;
-    font-size: 16px;
+    font-size: calc(10px + 0.5vw);
 }
